[tool.poetry]
name = "vessel-finder"
version = "0.0.0"
description = ""
authors = ["Wojciech Richert 33549959+wojtekrichert@users.noreply.github.com"]

[tool.poetry.dependencies]
python = "~3.9.1"
pydantic = "==1.8.1"
lxml = "==4.6.3"
selenium = "==3.141.0"
urllib3 = "==1.26.4"


[tool.poetry.dev-dependencies]
# tests
pytest = "==6.2.3"
factory-boy = "==3.2.0"
# code quality
black = "==20.8b1"
isort = "==5.8.0"
flake8 = "==3.9.0"
flake8-isort = "==4.0.0"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry>=1.1.5"]
build-backend = "poetry.masonry.api"
